# miden-crypto

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build.rs  deny.toml  rust-toolchain.toml  rustfmt.toml
.config/: nextest.toml
.github/actions/cleanup-runner/: action.yml
.github/actions/install-llvm/: action.yml
.github/actions/install-rocksdb/: action.yml
.github/actions/install-vllm/: action.yml
.github/workflows/: build.yml  changelog.yml  lint.yml  msrv.yml  test.yml
arch/arm64-sve/rpo/: rpo_hash.h
benches/: README.md
miden-crypto/: Cargo.toml
miden-crypto-derive/: Cargo.toml  README.md
miden-crypto-derive/src/: lib.rs
miden-crypto-fuzz/: Cargo.toml
miden-crypto-fuzz/fuzz_targets/: smt.rs
miden-crypto/benches/: README.md  dsa.rs  encryption.rs  forest-smt.rs  hash.rs  large-smt.rs  merkle.rs  partial_mt.rs  persisted-forest-smt.rs  rand.rs  smt-subtree.rs  smt-with-entries.rs  smt.rs  store.rs  word.rs
miden-crypto/benches/common/: config.rs  data.rs  macros.rs  mod.rs
miden-crypto/src/: lib.rs  main.rs  word.rs
miden-crypto/src/aead/: mod.rs
miden-crypto/src/aead/aead_rpo/: mod.rs  test.rs
miden-crypto/src/aead/xchacha/: mod.rs  test.rs
miden-crypto/src/dsa/: mod.rs
miden-crypto/src/dsa/ecdsa_k256_keccak/: mod.rs  tests.rs
miden-crypto/src/dsa/eddsa_25519/: mod.rs  tests.rs
miden-crypto/src/dsa/eddsa_25519_sha512/: mod.rs  tests.rs
miden-crypto/src/dsa/falcon512_rpo/: hash_to_point.rs  signature.rs
miden-crypto/src/dsa/falcon512_rpo/keys/: mod.rs  public_key.rs  secret_key.rs
miden-crypto/src/dsa/falcon512_rpo/math/: polynomial.rs  samplerz.rs
miden-crypto/src/dsa/falcon512_rpo/tests/: data.rs  mod.rs  prng.rs
miden-crypto/src/dsa/rpo_falcon512/: hash_to_point.rs  mod.rs  signature.rs
miden-crypto/src/dsa/rpo_falcon512/keys/: mod.rs  public_key.rs  secret_key.rs
miden-crypto/src/dsa/rpo_falcon512/math/: ffsampling.rs  mod.rs  polynomial.rs
miden-crypto/src/dsa/rpo_falcon512/tests/: data.rs  mod.rs  prng.rs
miden-crypto/src/ecdh/: k256.rs  mod.rs  x25519.rs
miden-crypto/src/encryption/: mod.rs
miden-crypto/src/encryption/xchacha/: mod.rs  test.rs
miden-crypto/src/hash/: mod.rs
miden-crypto/src/hash/algebraic_sponge/: mod.rs
miden-crypto/src/hash/algebraic_sponge/poseidon2/: constants.rs  mod.rs  test.rs
miden-crypto/src/hash/algebraic_sponge/rescue/: mod.rs
miden-crypto/src/hash/algebraic_sponge/rescue/arch/: mod.rs  x86_64_avx2.rs  x86_64_avx512.rs
miden-crypto/src/hash/algebraic_sponge/rescue/rpo/: mod.rs  tests.rs
miden-crypto/src/hash/algebraic_sponge/rescue/rpx/: mod.rs  tests.rs
miden-crypto/src/hash/blake/: mod.rs  tests.rs
miden-crypto/src/hash/keccak/: mod.rs  tests.rs
miden-crypto/src/hash/rescue/: mod.rs
miden-crypto/src/hash/rescue/rpo/: digest.rs  mod.rs  tests.rs
miden-crypto/src/hash/rescue/rpx/: digest.rs  mod.rs
miden-crypto/src/ies/: crypto_box.rs  keys.rs  message.rs  mod.rs  tests.rs
miden-crypto/src/merkle/: empty_roots.rs  error.rs  index.rs  merkle_tree.rs  mod.rs  node.rs  path.rs  sparse_path.rs
miden-crypto/src/merkle/forest/: mod.rs  tests.rs
miden-crypto/src/merkle/mmr/: delta.rs  error.rs  forest.rs  full.rs  mod.rs  partial.rs  peaks.rs  proof.rs  tests.rs
miden-crypto/src/merkle/partial_mt/: mod.rs  tests.rs
miden-crypto/src/merkle/smt/: mod.rs  partial.rs
miden-crypto/src/merkle/smt/forest/: mod.rs  store.rs  tests.rs
miden-crypto/src/merkle/smt/full/: error.rs  leaf.rs  mod.rs  proof.rs  tests.rs
miden-crypto/src/merkle/smt/full/concurrent/: mod.rs  tests.rs
miden-crypto/src/merkle/smt/full/large/: error.rs  mod.rs  subtree.rs  test_details.rs  tests.rs
miden-crypto/src/merkle/smt/full/large/storage/: error.rs  memory.rs  mod.rs  rocksdb.rs  updates.rs
miden-crypto/src/merkle/smt/full/large/subtree/: mod.rs  tests.rs
miden-crypto/src/merkle/smt/history/: error.rs  mod.rs
miden-crypto/src/merkle/smt/large/: batch_ops.rs  construction.rs  error.rs  iter.rs  mod.rs  property_tests.rs  smt_trait.rs  tests.rs  trait_impl.rs  utils.rs
miden-crypto/src/merkle/smt/large/batch_ops/: insertion.rs  mod.rs  mutations.rs
miden-crypto/src/merkle/smt/large/storage/: error.rs  memory.rs  mod.rs  rocksdb.rs  updates.rs
miden-crypto/src/merkle/smt/large/subtree/: error.rs  mod.rs
miden-crypto/src/merkle/smt/large_forest/: error.rs  history.rs  mod.rs  operation.rs  prefix.rs  property_tests.rs  tests.rs  utils.rs
miden-crypto/src/merkle/smt/large_forest/storage/: error.rs  memory.rs  mod.rs  rocksdb.rs
miden-crypto/src/merkle/smt/partial/: mod.rs  tests.rs
miden-crypto/src/merkle/smt/persisted_forest/: mod.rs  store.rs  tests.rs
miden-crypto/src/merkle/smt/simple/: mod.rs  proof.rs  tests.rs
miden-crypto/src/merkle/store/: mod.rs  tests.rs
miden-crypto/src/rand/: rpo.rs  rpx.rs
miden-crypto/src/utils/: mod.rs
miden-crypto/src/word/: lexicographic.rs  macros.rs  mod.rs  tests.rs
miden-crypto/tests/: rocksdb_large_smt.rs
scripts/: check-msrv.sh
src/: lib.rs  main.rs
src/arch/: mod.rs
src/arch/avx512/: mod.rs
src/arch/x86_64_avx2/: mod.rs
src/hash/rescue/: mod.rs
src/hash/rescue/arch/: mod.rs
src/hash/rescue/rpo/: mod.rs
src/hash/rescue/rpx/: mod.rs
src/hash/rpo/: mod.rs
src/merkle/: mod.rs  sparse_path.rs
src/merkle/smt/: mod.rs  tests.rs
src/merkle/smt/full/: mod.rs  tests.rs
src/merkle/smt/simple/: mod.rs  tests.rs
