[workspace]
exclude  = ["miden-crypto-fuzz"]
members  = ["miden-crypto", "miden-crypto-derive"]
resolver = "3"

[workspace.package]
authors      = ["miden contributors"]
categories   = ["cryptography", "no-std"]
edition      = "2024"
keywords     = ["crypto", "hash", "merkle", "miden"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/0xMiden/crypto"
rust-version = "1.90"
version      = "0.19.1"

[workspace.dependencies]
miden-crypto-derive = { path = "miden-crypto-derive", version = "0.19" }

[workspace.lints.rust]
# Suppress warnings about `cfg(fuzzing)`, which is automatically set when using `cargo-fuzz`.
unexpected_cfgs = { check-cfg = ['cfg(fuzzing)'], level = "warn" }
