[package]
authors.workspace      = true
categories.workspace   = true
description            = "Procedural macros for miden-crypto"
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
name                   = "miden-crypto-derive"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn   = { features = ["full"], version = "2.0" }

[lints]
workspace = true
