[package]
edition = "2024"
name    = "miden-crypto-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
miden-crypto  = { features = ["concurrent", "fuzzing"], path = "../miden-crypto" }
rand          = { default-features = false, version = "0.9" }

[[bin]]
bench = false
doc   = false
name  = "smt"
path  = "fuzz_targets/smt.rs"
test  = false

[lints.rust]
unexpected_cfgs = { check-cfg = ['cfg(fuzzing)'], level = "warn" }
