[package]
authors.workspace      = true
categories.workspace   = true
description            = "Miden Cryptographic primitives"
documentation          = "https://docs.rs/miden-crypto/0.17.0"
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
name                   = "miden-crypto"
readme                 = "../README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.17.0"

[[bin]]
bench             = false
doctest           = false
name              = "miden-crypto"
path              = "src/main.rs"
required-features = ["executable"]

[[bench]]
harness = false
name    = "hash"

[[bench]]
harness = false
name    = "smt"

[[bench]]
harness           = false
name              = "smt-subtree"
required-features = ["internal"]

[[bench]]
harness = false
name    = "merkle"

[[bench]]
harness = false
name    = "smt-with-entries"

[[bench]]
harness = false
name    = "store"

[[bench]]
harness = false
name    = "dsa"

[[bench]]
harness = false
name    = "word"

[[bench]]
harness = false
name    = "rand"

[features]
concurrent = ["dep:rayon", "hashbrown?/rayon"]
default = ["concurrent", "std"]
executable = ["dep:clap", "dep:rand-utils", "std"]
hashmaps = ["dep:hashbrown"]
internal = []
serde = ["dep:serde", "serde?/alloc", "winter-math/serde"]
std = [
  "blake3/std",
  "dep:cc",
  "rand/std",
  "rand/thread_rng",
  "winter-crypto/std",
  "winter-math/std",
  "winter-utils/std",
]

[dependencies]
blake3        = { default-features = false, version = "1.8" }
clap          = { features = ["derive"], optional = true, version = "4.5" }
getrandom     = { features = ["js"], version = "0.2" }
hashbrown     = { features = ["serde"], optional = true, version = "0.15" }
hkdf          = { default-features = false, version = "0.12" }
k256          = { features = ["ecdh", "ecdsa"], version = "0.13" }
num           = { default-features = false, features = ["alloc", "libm"], version = "0.4" }
num-complex   = { default-features = false, version = "0.4" }
rand          = { default-features = false, version = "0.9" }
rand-utils    = { optional = true, package = "winter-rand-utils", version = "0.13" }
rand_chacha   = { default-features = false, version = "0.9" }
rand_core     = { default-features = false, version = "0.9" }
rand_hc       = { version = "0.3" }
rayon         = { optional = true, version = "1.10" }
serde         = { default-features = false, features = ["derive"], optional = true, version = "1.0" }
sha3          = { default-features = false, version = "0.10" }
thiserror     = { default-features = false, version = "2.0" }
winter-crypto = { default-features = false, version = "0.13" }
winter-math   = { default-features = false, version = "0.13" }
winter-utils  = { default-features = false, version = "0.13" }

[dev-dependencies]
assert_matches = { default-features = false, version = "1.5" }
criterion      = { features = ["html_reports"], version = "0.7" }
hex            = { default-features = false, features = ["alloc"], version = "0.4" }
itertools      = { version = "0.14" }
proptest       = { default-features = false, features = ["alloc"], version = "1.7" }
rand-utils     = { package = "winter-rand-utils", version = "0.13" }
rand_chacha    = { default-features = false, version = "0.9" }
rstest         = { version = "0.26" }
seq-macro      = { version = "0.3" }

[build-dependencies]
cc   = { features = ["parallel"], optional = true, version = "1.2" }
glob = "0.3"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["getrandom"]
